--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "house league baseball team management app",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
