--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "house league baseball team management app",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "start": "cd client && npm install && npm run build && cd .. && node app.js"
   },
   "repository": {
     "type": "git",
